--- a/pages/other pages/events.html
+++ b/pages/other pages/events.html
@@ -4,6 +4,9 @@
 <head>
 	
 <meta charset='UTF-8'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Events - Global Fun City </title>
@@ -37,6 +40,31 @@
 		</div>
 
 <div class="header" >
+	<!-- sidenav -->
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a class="navigation__link" href="../../index.html">HOME</a>
+	 	<a class="active" href="../../pages/other pages/home.html"> ABOUT</a>
+	 	<a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> 
+		<a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> 
+	  	<a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> 
+		<a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> 
+ 		<a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
+	 	<a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT </a>
+		<hr>
+		<a href="../signup for booking/signup.html">BOOK TICKETS</a>
+		<hr>
+		<a href="../../pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
+		<a href="../../pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
+		<a href="../../pages/footer other pages/greeninitiatives.html">Green Initiatives</a>
+		<a href="../../pages/footer other pages/csrinitiatives.html">CSR Initiatives</a>
+		<hr>
+		<a href="../../pages/signup for booking/signup.html">Sign In</a> 
+	  </div>
+	<div class="icon-bar">
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+	</div>
+	<!-- sidenav -->
 <a href="../../index.html">
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
@@ -54,7 +82,7 @@
 
 	 </nav>
 	 <div>
-	 	 <a href="../../pages/signup for booking/signup.html"><button> <b>BOOK NOW </b> </button> </a>
+	 	 <a href="../../pages/signup for booking/signup.html"><button class="btn-book-now"> <b>BOOK NOW </b> </button> </a>
 </div>
 </div>
 
@@ -228,7 +256,17 @@
 			<p>Global Fun City &#169; 2022. All rights Reserved.
 				<br>Site designed by Vignesh.in</p>
 			</div>
-		</footer>		
+		</footer>	
+		
+		<script>
+			function openNav() {
+			  document.getElementById("mySidenav").style.width = "250px";
+			}
+			
+			function closeNav() {
+			  document.getElementById("mySidenav").style.width = "0";
+			}
+			</script>
 
 </body>
 </html>
