--- a/pages/signup for booking/forgot-password.html
+++ b/pages/signup for booking/forgot-password.html
@@ -32,13 +32,13 @@
     <h3>Forgot Your Password</h3>
     <p>Please enter the email address you'd like your password reset information sent to</p>
     <form>
-    <input type="email" id="email" name="email" placeholder="Email Address">
+    <input type="email" id="email" name="email" placeholder="Email Address" required="true">
     </form>
     
     <br>
 
     <div class="btn-link">
-    <a href="../../pages/signup for booking/forgot-password-verification.html"><button>Request reset link</button></a>
+    <button type="button" onclick="signin()">Request reset link</button>
     </div>
     
     <br>
@@ -48,6 +48,17 @@
 </div>
 
 </div>
+
+<script>
+    function signin(){
+const email =document.getElementById("email") .value
+
+localStorage.setItem("email", email)
+
+window.location.href="../../pages/signup for booking/forgot-password-verification.html"
+
+    }
+</script>
 
 </body>
 </html>
