--- a/pages/other pages/home.html
+++ b/pages/other pages/home.html
@@ -53,12 +53,14 @@
  		<a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
 	 	<a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT </a>
 		<hr>
-		<a href="">BOOK TICKETS</a>
+		<a href="../signup for booking/signup.html">BOOK TICKETS</a>
 		<hr>
-		<a href="">Safety of visitors</a>
-		<a href="">Rules & Regulations</a>
-		<a href="">Green Initiatives</a>
-		<a href="">CSR Initiatives</a> 
+		<a href="../../pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
+		<a href="../../pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
+		<a href="../../pages/footer other pages/greeninitiatives.html">Green Initiatives</a>
+		<a href="../../pages/footer other pages/csrinitiatives.html">CSR Initiatives</a>
+		<hr>
+		<a href="../../pages/signup for booking/signup.html">Sign In</a> 
 	  </div>
 	<div class="icon-bar">
 		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
@@ -66,6 +68,10 @@
 <a href="../../index.html" >
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
+
+<!-- media screen profile -->
+
+
    	 <nav class="navbar">
 	 <ul>
 	 <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a>
@@ -234,6 +240,9 @@
 		  document.getElementById("mySidenav").style.width = "0";
 		}
 		</script>
+
+		</body>
+		</html>
 
 
 
