--- a/pages/signup for booking/forgot-password-new-password.html
+++ b/pages/signup for booking/forgot-password-new-password.html
@@ -32,12 +32,20 @@
     <h3>Enter New Password</h3>
     <h5>Password must be a minimum of 8 characters and should contain at least one upper- and lower-case letter, a number, and a symbol.</h5>
 
-    <input type="password" id="password" name="password" placeholder="Password" required="yes">
-    <input type="password" id="password" name="confirm-password" placeholder="Confirm Password" required="yes">
+    <input type="password" id="password" name="password" placeholder="Password" required="yes" value="********"/>
+    <input type="password" id="confirm_password" name="confirm-password" placeholder="Confirm Password" required="yes" value="********"/>
     &nbsp;
     <a href="../../pages/signup for booking/signup.html"><button>Reset Password</button></a>
 </div>
 </div>
+
+<script>
+const password =document.getElementById("password") .value
+const confirm_password =document.getElementById("confirm_password") .value
+
+console.log(password)
+console.log(confirm_password)
+</script>
 
 
 
