--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +29,7 @@
 </div>	
 
 <div class="sign-in">
-	<p><a href="./pages/signup for booking/signup.html"> Sign In or Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
+	<p><a href="./pages/signup for booking/signup.html"> Sign In </a> | <a href="./pages/signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
 </div>
 
 </div>
@@ -45,7 +46,7 @@
  		<a class="navigation__link" href="./pages/other pages/attractions.html"> ATTRACTIONS </a> 
 	 	<a class="navigation__link" href="./pages/other pages/contact.html"> CONTACT </a>
 		<hr>
-		<a href="./signup for booking/signup.html">BOOK TICKETS</a>
+		<a href="./pages/signup for booking/signup.html">BOOK TICKETS</a>
 		<hr>
 		<a href="./pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
 		<a href="./pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
@@ -88,7 +89,7 @@
 
 </div>
 
-<div class="box">
+<div class="box" id="box_1">
 	<div class="welcome-global-funcity">
 	<h2> Welcome to </h2>
 	<h1> The Global Fun City </h1>
@@ -98,7 +99,7 @@
 </div>
 
 
-<div class="messages">
+<div class="messages" id="box_2">
 <div class="step">
 <h3>Step into a world of magic, where joy springs to life! </h3>
 </div>
@@ -222,11 +223,11 @@ Enjoy scrumptious meals at Global Fun City.</p>
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="./pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="./pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="./pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="./pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="./pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="./pages/footer other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="./pages/footer other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="./pages/footer other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="./pages/footer other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="./pages/footer other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
