--- a/pages/footer other pages/greeninitiatives.html
+++ b/pages/footer other pages/greeninitiatives.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title>Green Initiatives - Global Fun City</title>
-<link rel="stylesheet" href="../../assets/css/greeninitiatives.css" />
+<link rel="stylesheet" href="../../assets/footer other pages css/greeninitiatives.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
