--- a/pages/other pages/contact.html
+++ b/pages/other pages/contact.html
@@ -28,7 +28,7 @@
 		</div>	
 		
 		<div class="sign-in">
-			<p><a href="../../pages/signup for booking/signup.html"> Sign In or Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
+			<p><a href="../../pages/signup for booking/signup.html"> Sign In </a> | <a href="../signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 		</div>
@@ -51,7 +51,7 @@
 
 	 </nav>
 	 <div>
-	 	<a href="../../pages/signup for booking/signup.html"> <button> <b>BOOK NOW </b> </button></a>
+	 	<a href="../../pages/signup for booking/signup.html"> <button class="btn-book-now"> <b>BOOK NOW </b> </button></a>
 </div>
 </div>
 
