--- a/pages/other pages/home.html
+++ b/pages/other pages/home.html
@@ -36,7 +36,7 @@
 		
 		<div class="sign-in">
 			
-    <p><a href="../../pages/signup for booking/signup.html"> Sign In or Create Account</a>  <i class="fa-solid fa-globe"></i> United states (English)</p>
+    <p><a href="../../pages/signup for booking/signup.html"> Sign In </a>| <a href="../signup for booking/create-an-account.html"> Create Account</a> | <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 	</div>
