--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -27,7 +27,7 @@
 		
 		<div class="sign-in">
 			
-    <p><a href="../../pages/signup for booking/signup.html"> Sign In or Create Account</a> | <i class="fa-solid fa-globe"></i> United states (English)</p>
+    <p><a href="../../pages/signup for booking/signup.html"> Sign In </a> | <a href="../signup for booking/create-an-account.html"> Create Account</a> | <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 	</div>
@@ -60,7 +60,7 @@
 
 
 <video autoplay="false" loop muted plays-inline class="back-video">
-	  <source src="../../assets/images/aquapark video.mp4"  type="video/mp4">
+	  <source src="../../assets/videos/aquapark video.mp4"  type="video/mp4">
 </video>
 
 </div>
@@ -110,7 +110,7 @@
 	</div>
 	<div class="privacypolicy">
 	<input type="radio" id="agree">	
-	<label for="agree">I agree to the <a href="../../pages/other pages/privacypolicy.html" target="_blank">Privacy Policy</label> </a>
+	<label for="agree">I agree to the <a href="../../pages/footer other pages/privacypolicy.html" target="_blank">Privacy Policy</label> </a>
 	</div>
 </section>
 
