--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -58,9 +58,7 @@
 
 				<ul>
 					<h4>Women</h4>
-					<li><a href="">Dresses & Skrits</a></li>
-					<li><a href="">Jerseys</a></li>
-					<li><a href="">Jackets & Sweaters</a></li>
+					<li><a href="../../pages/shop/women.shop/jackets-&-sweaters,women.html">Jackets & Sweaters</a></li>
 					<li><a href="">Sleepwear & Loungewear</a></li>
 					<li><a href="">Shorts & Pants</a></li>
 					<li><a href="">T-Shirt & Top</a></li>
@@ -162,7 +160,7 @@
 <!-- completed dropdown -->
 
 <div class="image-for-shopping">
-	<img src="../../assets/images/Ecommerce web page-pana.png" width="900" alt="image-for-shop"/>
+	<img src="../../assets/images/Ecommerce web page-pana.png" width="700" alt="image-for-shop"/>
 </div>
 
 <div class="circle">
