--- a/pages/footer other pages/privacypolicy.html
+++ b/pages/footer other pages/privacypolicy.html
@@ -7,7 +7,7 @@
 
 <title>Privacy Policy - Global Fun City</title>
 
-<link rel="stylesheet" href="../../assets/css/privacypolicy.css" />
+<link rel="stylesheet" href="../../assets/footer other pages css/privacypolicy.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
