--- a/pages/footer other pages/rulesandregulations.html
+++ b/pages/footer other pages/rulesandregulations.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title>Rules and Regulations - Global Fun City</title>
-<link rel="stylesheet" href="../../assets/css/rulesandregulations.css" />
+<link rel="stylesheet" href="../../assets/footer other pages css/rulesandregulations.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
