--- a/pages/footer other pages/safetyofvisitors.html
+++ b/pages/footer other pages/safetyofvisitors.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title>Safety and Hygiene-Global Fun City</title>
-<link rel="stylesheet" href="../../assets/css/safetyofvisitors.css" />
+<link rel="stylesheet" href="../../assets/footer other pages css/safetyofvisitors.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
