--- a/pages/offer packages/3nights4daysoffer.html
+++ b/pages/offer packages/3nights4daysoffer.html
@@ -5,7 +5,7 @@
 	<meta charset='UTF-8'>
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> 3 Nights 4 Days Offer - Offer - Global Fun City </title>
-<link rel="stylesheet" href="../../assets/css/3nights4daysoffer.css" />
+<link rel="stylesheet" href="../../assets/offer css/3nights4daysoffer.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
