--- a/pages/offer packages/summeroffer.html
+++ b/pages/offer packages/summeroffer.html
@@ -5,7 +5,7 @@
 	<meta charset='UTF-8'>
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title>Summer Offer - Global Fun City </title>
-<link rel="stylesheet" href="../../assets/css/summeroffer.css" />
+<link rel="stylesheet" href="../../assets/offer css/summeroffer.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
