--- a/pages/offer packages/valentineoffer.html
+++ b/pages/offer packages/valentineoffer.html
@@ -6,7 +6,7 @@
 	<meta charset='UTF-8'>
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> Valentine Offer - Global Fun City </title>
-<link rel="stylesheet" href="../../assets/css/valentineoffer.css" />
+<link rel="stylesheet" href="../../assets/offer css/valentineoffer.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
