--- a/pages/other pages/events.html
+++ b/pages/other pages/events.html
@@ -5,7 +5,7 @@
 	
 <meta charset='UTF-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
@@ -34,7 +34,7 @@
 		</div>	
 		
 		<div class="sign-in">
-			<p><a href="../../pages/signup for booking/signup.html"> Sign In or Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
+			<p><a href="../../pages/signup for booking/signup.html"> Sign In </a> |<a href="../signup for booking/create-an-account.html"> Create Account</a>  | <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 		</div>
