--- a/pages/signup for booking/create-an-account.html
+++ b/pages/signup for booking/create-an-account.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
-<title> Create an Account - Global Fun City</title>
+<title> Global Fun City - Registration</title>
 <link rel="stylesheet" href="../../assets/signup for booking/create-an-account.css"/>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,77 +29,86 @@
     <img src="../../assets/images/global-account-logo.png" width="250" alt="global-account"/>
     <h3>Create Your Account</h3>
     <div class="information-of-users">
-    <form>
+    <form role="form" onsubmit="create(event);">
             <input type="text" id="first_name" placeholder="First Name" required="true" /> &nbsp;
             <input type="text" id="middle_name" placeholder="Middle Name (optional)" /> &nbsp;
             <input type="text" id="last_name" placeholder="Last Name" required="true" /> &nbsp;
             <input type="email" id="email" placeholder="Email Address" required="true" /> &nbsp;
-            <input type="password" id="password" placeholder="Password" required="true" /> &nbsp;
+            <input type="password" id="password" placeholder="Password"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
+            title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum 10 characters"  required="true" /> &nbsp;
             <input type="password" id="re_enter_password" placeholder="Re-Enter Password" required="true"  /> &nbsp;
             <input onfocus="(this.type = 'date')" id="date" placeholder="Date of Birth" required="true"/>
-    </form> 
+   
     </div> 
     &nbsp;     
     <div class="right-checkbox">  
-            <input type="checkbox" id="right" name="right" value="right">
+            <input type="checkbox" id="right" name="right" value="right" required>
             <label for="right">Yes! I would like to receive updates, special offers, and other information from Global Fun City & Resorts businesses.</label>
     </div>
     &nbsp;
     <div class="right-terms-conditions">
-        <input type="checkbox" id="right" name="right" value="right">
-        <label for="right">I have read and agree to the Global Fun City Terms and Conditions</label>
+        <input type="checkbox" id="right" name="right" value="right" required>
+        <label for="right">I have read and agree to the Global Fun City Terms and Conditions.</label>
 
     </div>
        
     <p>By creating an account, I agree to the Terms of Use and acknowledge that I have read the <a href="../../pages/footer other pages/privacypolicy.html"> Privacy Policy. </a></p>
 
-    <a href="../../pages/homepage/index-profile.html"><button class="btn-create-account" type="button" onclick="signup()">Create Account</button></a>
+    <button class="btn-create-account" type="submit">Create Account</button>
 
     <h5>Already have an account? <a href="../../pages/signup for booking/signup.html">Sign In</a></h5>
+</form> 
 </div>
 </div>
 
-
+<!-- <div class="request">
+    <p>Privacy Notice</p>
+    <p>Terms of Use</p>
+    <p>Help</p>
+</div> -->
 
 
 
 
 <script>
 
-function  signup(){
+// function  signup(){
 
 
-const first_name = document.getElementById("first_name") .value
-const middle_name = document.getElementById("middle_name") .value
-const last_name = document.getElementById("last_name") .value
-const email = document.getElementById("email") .value
-const password = document.getElementById("password") .value
-const re_enter_password = document.getElementById("re_enter_password") .value
-const date = document.getElementById("date") .value
-const right = document .getElementById("right") .value
+// const first_name = document.getElementById("first_name") .value
+// const middle_name = document.getElementById("middle_name") .value
+// const last_name = document.getElementById("last_name") .value
+// const email = document.getElementById("email") .value
+// const password = document.getElementById("password") .value
+// const re_enter_password = document.getElementById("re_enter_password") .value
+// const date = document.getElementById("date") .value
+// const right = document .getElementById("right") .value
 
 
-console.log(first_name)
-console.log(middle_name)
-console.log(last_name)
-console.log(email)
-console.log(password)
-console.log(re_enter_password)
-console.log(date)
-console.log(right)
+// console.log(first_name)
+// console.log(middle_name)
+// console.log(last_name)
+// console.log(email)
+// console.log(password)
+// console.log(re_enter_password)
+// console.log(date)
+// console.log(right)
 
-localStorage.setItem("first_name",first_name )
-localStorage.setItem("middle_name",middle_name )
-localStorage.setItem("last_name", last_name)
-localStorage.setItem("email", email)
-localStorage.setItem("password", password)
-localStorage.setItem("re_enter_password", re_enter_password)
-localStorage.setItem("date", date)
-localStorage.setItem("checkbox", checkbox)
-}   
+// localStorage.setItem("first_name",first_name )
+// localStorage.setItem("middle_name",middle_name )
+// localStorage.setItem("last_name", last_name)
+// localStorage.setItem("email", email)
+// localStorage.setItem("password", password)
+// localStorage.setItem("re_enter_password", re_enter_password)
+// localStorage.setItem("date", date)
+// localStorage.setItem("checkbox", checkbox)
+
+// window
+// }   
 
 
 
 </script>
+<script src="../../js/create-an-account.js"></script>
 </body>
 </html>    
